--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -4,7 +4,9 @@ securityManager.cacheManager = $cacheManager
 #Integrate with Stormpath:
 stormpathClient = com.stormpath.shiro.client.ClientFactory
 stormpathClient.cacheManager = $cacheManager
-stormpathClient.apiKeyFileLocation = src\main\webapp\WEB-INF\apiKey.properties
+#Apikey set as environment vars
+apiKeyProps = com.stormpath.sample.client.ApiKeyEnvVariables
+stormpathClient.apiKeyProperties = $apiKeyProps
 
 #Custom Realm 
 stormpathRealm=com.stormpath.shiro.realm.ApplicationRealm
