--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -5,7 +5,7 @@ securityManager.cacheManager = $cacheManager
 stormpathClient = com.stormpath.shiro.client.ClientFactory
 stormpathClient.cacheManager = $cacheManager
 #Apikey set as environment vars
-apiKeyProps = com.stormpath.sample.client.ApiKeyEnvVariables
+apiKeyProps = ServerSide.Init.ApiKeyEnvVariables
 stormpathClient.apiKeyProperties = $apiKeyProps
 
 #Custom Realm 
