--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
             <version>2.5.0</version>
             <type>jar</type>
         </dependency>
+        
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -107,7 +108,7 @@
             <version>9.1-901-1.jdbc4</version>
         </dependency>
         
-        <!--JSON mappers-->
+        <!--JSON mappers
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
@@ -120,6 +121,7 @@
             <version>1.1</version>
             <type>jar</type>
         </dependency>
+        -->
         
         <!--Test data generator-->
         <dependency>
@@ -135,12 +137,14 @@
             <artifactId>security</artifactId>
             <version>1.0</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.4.0</version>
             <type>jar</type>
         </dependency>
+        -->
 <!--        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
