--- a/pom.xml
+++ b/pom.xml
@@ -147,13 +147,15 @@
             <type>jar</type>
         </dependency>
         -->
-        <dependency>
+            <dependency>
             <groupId>PMC</groupId>
             <artifactId>security</artifactId>
-            <version>2.0</version>
+            <version>3.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
-        
+            
     </dependencies>
+    
     <repositories>
         <repository>
             <id>project.local</id>
