--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
             <version>7.6.0.v20120127</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlets</artifactId>
             <version>7.6.0.v20120127</version>
-        </dependency>
+        </dependency>-->
 
         <!-- Jersey -->
         <dependency>
@@ -151,20 +151,17 @@
         </dependency>
     
         <!--Local repo dependencies-->
-        
-        <dependency>
-            <groupId>PMC</groupId>
-            <artifactId>security</artifactId>
-            <version>3.0-SNAPSHOT</version>
-            <type>jar</type>
-        </dependency>
               
         <!--        <dependency>
             <groupId>PMC</groupId>
             <artifactId>security</artifactId>
             <version>3.0.1-SNAPSHOT</version>
         </dependency>-->
-
+        <dependency>
+            <groupId>PMC</groupId>
+            <artifactId>security</artifactId>
+            <version>3.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
     
