--- a/pom.xml
+++ b/pom.xml
@@ -152,10 +152,17 @@
     
         <!--Local repo dependencies-->
               
+<!--        
         <dependency>
             <groupId>PMC</groupId>
             <artifactId>security</artifactId>
             <version>3.0-SNAPSHOT</version>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>PMC</groupId>
+            <artifactId>security</artifactId>
+            <version>4.0-Local</version>
         </dependency>
     </dependencies>
     
